// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Select /> Compact story renders snapshot 1`] = `
<div
  class="select select--compact"
  data-headlessui-state="open"
  data-testid="dropdown"
>
  <button
    aria-controls="headlessui-listbox-options-:rr:"
    aria-expanded="true"
    aria-haspopup="listbox"
    class="select-button select-button--compact"
    data-headlessui-state="open"
    id="headlessui-listbox-button-:rq:"
    type="button"
  >
    <span>
      Select
    </span>
    <svg
      aria-hidden="true"
      class="icon select-button__icon select-button__icon--reversed"
      fill="currentColor"
      height="1.25rem"
      style="--icon-size: 1.25rem;"
      viewBox="0 0 24 24"
      width="1.25rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
      />
    </svg>
  </button>
</div>
`;

exports[`<Select /> Default story renders snapshot 1`] = `
<div
  class="select w-60"
  data-headlessui-state="open"
  data-testid="dropdown"
>
  <button
    aria-controls="headlessui-listbox-options-:r1:"
    aria-expanded="true"
    aria-haspopup="listbox"
    class="select-button"
    data-headlessui-state="open"
    id="headlessui-listbox-button-:r0:"
    type="button"
  >
    <span>
      Select
    </span>
    <svg
      aria-hidden="true"
      class="icon select-button__icon select-button__icon--reversed"
      fill="currentColor"
      height="1.25rem"
      style="--icon-size: 1.25rem;"
      viewBox="0 0 24 24"
      width="1.25rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
      />
    </svg>
  </button>
</div>
`;

exports[`<Select /> DefaultWithVisibleLabel story renders snapshot 1`] = `
<div
  class="select w-60"
  data-headlessui-state="open"
  data-testid="dropdown"
>
  <div
    class="select__overline"
  >
    <label
      class="select__label"
      data-headlessui-state="open"
      id="headlessui-listbox-label-:rk:"
    >
      Favorite Animal
    </label>
  </div>
  <button
    aria-controls="headlessui-listbox-options-:rm:"
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-labelledby="headlessui-listbox-label-:rk: headlessui-listbox-button-:rl:"
    class="select-button"
    data-headlessui-state="open"
    id="headlessui-listbox-button-:rl:"
    type="button"
  >
    <span>
      Select
    </span>
    <svg
      aria-hidden="true"
      class="icon select-button__icon select-button__icon--reversed"
      fill="currentColor"
      height="1.25rem"
      style="--icon-size: 1.25rem;"
      viewBox="0 0 24 24"
      width="1.25rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
      />
    </svg>
  </button>
</div>
`;

exports[`<Select /> NoVisibleLabel story renders snapshot 1`] = `
<div
  class="select w-60"
  data-headlessui-state="open"
  data-testid="dropdown"
>
  <button
    aria-controls="headlessui-listbox-options-:r10:"
    aria-expanded="true"
    aria-haspopup="listbox"
    class="select-button"
    data-headlessui-state="open"
    id="headlessui-listbox-button-:rv:"
    type="button"
  >
    <span>
      Select
    </span>
    <svg
      aria-hidden="true"
      class="icon select-button__icon select-button__icon--reversed"
      fill="currentColor"
      height="1.25rem"
      style="--icon-size: 1.25rem;"
      viewBox="0 0 24 24"
      width="1.25rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
      />
    </svg>
  </button>
</div>
`;

exports[`<Select /> StyledUncontrolled story renders snapshot 1`] = `
<div
  class="select"
  data-headlessui-state="open"
  data-testid="dropdown"
>
  <button
    aria-controls="headlessui-listbox-options-:rg:"
    aria-expanded="true"
    aria-haspopup="listbox"
    class="select-button"
    data-headlessui-state="open"
    id="headlessui-listbox-button-:rf:"
    type="button"
  >
    <span>
      Dogs
    </span>
    <svg
      aria-hidden="true"
      class="icon select-button__icon select-button__icon--reversed"
      fill="currentColor"
      height="1.25rem"
      style="--icon-size: 1.25rem;"
      viewBox="0 0 24 24"
      width="1.25rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
      />
    </svg>
  </button>
</div>
`;

exports[`<Select /> UncontrolledHeadless story renders snapshot 1`] = `
<div
  class="select"
  data-headlessui-state="open"
  data-testid="dropdown"
>
  <button
    aria-controls="headlessui-listbox-options-:rb:"
    aria-expanded="true"
    aria-haspopup="listbox"
    class="fpo"
    data-headlessui-state="open"
    id="headlessui-listbox-button-:ra:"
    type="button"
  >
    Dogs
     
  </button>
</div>
`;

exports[`<Select /> UsingChildrenProp story renders snapshot 1`] = `
<div
  class="select w-60"
  data-headlessui-state="open"
  data-testid="dropdown"
>
  <div
    class="select__overline"
  >
    <label
      class="select__label"
      data-headlessui-state="open"
      id="headlessui-listbox-label-:r14:"
    >
      Favorite Animal
    </label>
  </div>
  <button
    aria-controls="headlessui-listbox-options-:r16:"
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-labelledby="headlessui-listbox-label-:r14: headlessui-listbox-button-:r15:"
    class="select-button"
    data-headlessui-state="open"
    id="headlessui-listbox-button-:r15:"
    type="button"
  >
    <span>
      Select
    </span>
    <svg
      aria-hidden="true"
      class="icon select-button__icon select-button__icon--reversed"
      fill="currentColor"
      height="1.25rem"
      style="--icon-size: 1.25rem;"
      viewBox="0 0 24 24"
      width="1.25rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
      />
    </svg>
  </button>
</div>
`;

exports[`<Select /> UsingFunctionChildrenProp story renders snapshot 1`] = `
<div
  aria-label="Favorite Animal"
  class="select w-60"
  data-headlessui-state="open"
  data-testid="dropdown"
>
  <button
    aria-controls="headlessui-listbox-options-:r1b:"
    aria-expanded="true"
    aria-haspopup="listbox"
    class="fpo"
    data-headlessui-state="open"
    id="headlessui-listbox-button-:r1a:"
    type="button"
  >
    Select
    <svg
      aria-hidden="true"
      class="icon ml-4"
      fill="currentColor"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M11 18h2c.55 0 1-.45 1-1s-.45-1-1-1h-2c-.55 0-1 .45-1 1s.45 1 1 1zM3 7c0 .55.45 1 1 1h16c.55 0 1-.45 1-1s-.45-1-1-1H4c-.55 0-1 .45-1 1zm4 6h10c.55 0 1-.45 1-1s-.45-1-1-1H7c-.55 0-1 .45-1 1s.45 1 1 1z"
      />
    </svg>
  </button>
</div>
`;

exports[`<Select /> WithFieldName story renders snapshot 1`] = `
<div
  class="select"
  data-headlessui-state="open"
  data-testid="dropdown"
>
  <button
    aria-controls="headlessui-listbox-options-:r6:"
    aria-expanded="true"
    aria-haspopup="listbox"
    class="select-button"
    data-headlessui-state="open"
    id="headlessui-listbox-button-:r5:"
    type="button"
  >
    <span>
      Dogs
    </span>
    <svg
      aria-hidden="true"
      class="icon select-button__icon select-button__icon--reversed"
      fill="currentColor"
      height="1.25rem"
      style="--icon-size: 1.25rem;"
      viewBox="0 0 24 24"
      width="1.25rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
      />
    </svg>
  </button>
</div>
`;

exports[`<Select /> WithSelectedOption story renders snapshot 1`] = `
<div
  class="select w-60"
  data-headlessui-state="open"
  data-testid="dropdown"
>
  <div
    class="select__overline"
  >
    <label
      class="select__label"
      data-headlessui-state="open"
      id="headlessui-listbox-label-:r1f:"
    >
      Favorite Animal
    </label>
  </div>
  <button
    aria-controls="headlessui-listbox-options-:r1h:"
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-labelledby="headlessui-listbox-label-:r1f: headlessui-listbox-button-:r1g:"
    class="select-button"
    data-headlessui-state="open"
    id="headlessui-listbox-button-:r1g:"
    type="button"
  >
    <span>
      Dogs
    </span>
    <svg
      aria-hidden="true"
      class="icon select-button__icon select-button__icon--reversed"
      fill="currentColor"
      height="1.25rem"
      style="--icon-size: 1.25rem;"
      viewBox="0 0 24 24"
      width="1.25rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
      />
    </svg>
  </button>
</div>
`;
